2010-01-01  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add ParameterRocks.cs and its unit tests to the build

2009-07-09  Jesse Jones  <jesjones@mindspring.com>

	* Makefile.am, ThreadModelAttribute.cs: Added new file allowing
	threading semantics of gendarme to be specified.

2009-07-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add a 'touch hack' so we only rebuild documentation
	when the framework assembly is changed.

2009-04-30  Jesse Jones  <jesjones@mindspring.com>

	* Makefile.am: Added VariableDefinitionRocks files.

2009-01-27  Jonathan Pryor  <jpryor@novell.com>

	* Makefile.am ($(framework_doc_source)): Change the .source file 
	  contents so that framework docs are placed under the 
	  'Gendarme Framework' node.

2008-11-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Use -noshadow on nunit-console2 so the "new" 2.4,
	now used inside mono, works properly.

2008-11-27  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Include the framework unit tests in the dist.

2008-11-23  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Avoid re-building documentation needlessly. This
	fix the case where a make install, under su, would fail to locate
	mdoc.

2008-11-17  Jesse Jones  <jesjones@mindspring.com>

	* Makefile.am: Added new Log.cs file.

2008-11-14  Jesse Jones  <jesjones@mindspring.com>

	* Makefile.am: Uses new options.make

2008-11-13  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add MethodPrinter to the build. Patch by	Jesse Jones

2008-11-09  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Add Test to SUBDIRS to fix make checkdist

2008-11-08  Alan McGovern  <alan.mcgovern@gmail.com>

	* Makefile.am:
	* Gendarme.Framework.csproj: Enable Makefile integration of
	Gendarme.Framework.csproj

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Gendarme.Framework.csproj: Activate makefile integration for all the